artifacthub/library/general/poddisruptionbudget/1.1.0/samples/poddisruptionbudget/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodDisruptionBudget
metadata:
  name: pod-distruption-budget
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
      - apiGroups: ["policy"]
        kinds: ["PodDisruptionBudget"]
      - apiGroups: [""]
        kinds: ["ReplicationController"]
      - apiGroups: ["autoscaling"]
        kinds: ["HorizontalPodAutoscaler"]
